appId: com.anonymous.ConcordiaMaps
---
- launchApp
- assertVisible: "Legend"
- tapOn:
    id: "hamburger-button"
- tapOn:
    point: "14%,19%"
    label: 'Tap on "Get directions"'
- tapOn:
    text: "Using Current Location"
    label: "Tap on origin search bar"
- inputText:
    label: "Input part of the origin"
    text: "h b"
- tapOn:
    text: "H Building Concordia University, Boulevard De Maisonneuve Ouest,\
      \ Montreal, QC, Canada"
    label: "Tap on suggested origin"
- tapOn:
    text: "Enter Destination"
    label: "Tap on destination search bar"
- inputText:
    label: "Input part of the destination"
    text: "pok pok"
- tapOn:
    text: "Pok Pok (Complexe Desjardins), Saint-Catherine Street West,\
      \ Montreal, QC, Canada"
    label: "Tap on suggested destination"
- tapOn: "GET DIRECTIONS"
- swipe:
    start: "50%,95%"
    end: "50%,65%"
    label: "Scroll down on the directions view"
- swipe:
    start: "50%,65%"
    end: "50%,95%"
    label: "Scroll up on the directions view"
- tapOn: "CHANGE DIRECTIONS"
- tapOn: "CAR"
- tapOn: "GET DIRECTIONS"
- swipe:
    start: "50%,95%"
    end: "50%,65%"
    label: "Scroll down on the directions view"
- swipe:
    start: "50%,65%"
    end: "50%,95%"
    label: "Scroll up on the directions view"
- tapOn: "CHANGE DIRECTIONS"
- tapOn: "TRANSIT"
- tapOn: "GET DIRECTIONS"
- tapOn: "CHANGE DIRECTIONS"
- tapOn: "BIKING"
- tapOn: "GET DIRECTIONS"
- swipe:
    start: "50%,95%"
    end: "50%,65%"
    label: "Scroll down on the directions view"
