appId: com.anonymous.ConcordiaMaps
---
- launchApp
- assertVisible: "Legend"
- tapOn:
    id: "hamburger-button"
- tapOn:
    point: "14%,19%"
    label: 'Tap on "Get directions"'
- tapOn:
    text: "Using Current Location"
    label: "Tap on origin search bar"
- inputText:
    label: "Input part of the origin"
    text: "snowdon"
- tapOn:
    text: "Snowdon, Côte-Des-Neiges—Notre-Dame-De-Grâce, Montreal, QC, Canada"
    label: "Tap on suggested origin"
- tapOn:
    text: "Enter Destination"
    label: "Tap on destination search bar"
- inputText:
    label: "Input part of the destination"
    text: "h b"
- tapOn:
    text: "H Building Concordia University, Boulevard De Maisonneuve Ouest, Montreal, QC, Canada"
    label: "Tap on suggested destination"
- tapOn: "GET DIRECTIONS"
- swipe:
    start: "49%,96%"
    end: "54%,64%"
- swipe:
    start: "46%,93%"
    end: "46%,63%"
- swipe:
    start: "48%,94%"
    end: "50%,67%"
